[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="EnemyStats" parent="." instance=ExtResource( 2 )]

[connection signal="got_hurt" from="Hurtbox" to="." method="_on_Hurtbox_got_hurt"]
[connection signal="died" from="EnemyStats" to="." method="_on_EnemyStats_died"]
